# remo

./: .env.example  .gitignore  CLAUDE.md  CONTINUITY-T0.md  CONTINUITY-T2.md  CONTINUITY-T3.md  CONTINUITY.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
backend/app/: config.py  logging.py  main.py  worker.py
backend/app/activities/: analyze_room.py  design_eval.py  edit.py  generate.py  intake.py  intake_eval.py  mock_stubs.py  purge.py  shopping.py  skill_loader.py  validation.py
backend/app/api/routes/: health.py  projects.py
backend/app/models/: contracts.py  db.py
backend/app/utils/: gemini_chat.py  http.py  image.py  image_eval.py  lidar.py  llm_cache.py  prompt_versioning.py  r2.py  score_tracking.py  tracing.py
backend/app/workflows/: design_project.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_cost_breakdown.py
backend/prompts/: edit.txt  edit_v2.txt  edit_v3.txt  edit_v4.txt  edit_v5.txt  edit_v6.txt  edit_v7.txt  generation.txt  generation_v1.txt  generation_v2.txt  generation_v3.txt  generation_v4.txt  generation_v5.txt  generation_v6.txt  generation_v7.txt  generation_v8.txt  intake_system.txt  item_extraction.txt  product_scoring.txt  prompt_versions.json  read_the_room.txt  room_preservation.txt  room_preservation_v1.txt  room_preservation_v2.txt  room_preservation_v3.txt  room_preservation_v4.txt  room_preservation_v5.txt
backend/prompts/skills/: bohemian.md  bright_airy.md  calm.md  cozy.md  luxurious.md  manifest.json  minimalist.md  modern.md  more_space.md  rustic.md  scandinavian.md
backend/tests/: conftest.py  test_analyze_room.py  test_api_endpoints.py  test_contracts.py  test_db_models.py  test_e2e.py  test_edit.py  test_gemini_chat.py  test_generate.py  test_image_utils.py  test_intake.py  test_intake_full_mode.py  test_intake_golden.py  test_intake_open_mode.py  test_integration_generate.py  test_lidar.py  test_llm_cache.py  test_migration.py  test_purge.py  test_r2.py  test_scaffold.py  test_shopping.py  test_temporal_bridge.py  test_tracing.py  test_validation.py  test_worker.py  test_workflow.py
backend/tests/eval/: conftest.py  dataset.py  prompt_ab_history.jsonl  scenarios.py  score_history.jsonl  test_calibration.py  test_design_eval.py  test_fast_eval.py  test_full_mode.py  test_golden.py  test_live_eval.py  test_open_mode.py  test_prompt_ab.py  test_prompt_versioning.py  test_score_tracking.py
backend/tests/eval/fixtures/: manifest.json
backend/tests/eval/fixtures/bedroom_minimal/: brief.json  metadata.json
(+75 files in other folders)
