[project]
name = "remo-backend"
version = "0.1.0"
description = "Remo AI room redesign backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "temporalio>=1.9,<2",
    "httpx>=0.28,<1",
    "boto3>=1.36,<2",
    "structlog>=25.1,<26",
    "pillow>=11,<12",
    "google-genai>=1,<2",
    "anthropic>=0.44,<1",
    "python-multipart>=0.0.20",
    "langsmith>=0.2,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]
eval = [
    "opencv-python-headless>=4.10,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/eval/dataset.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real API keys and external services",
    "e2e: marks tests that require a running backend (docker compose up + API server + worker)",
    "eval: marks tests for the eval layer (may require eval optional deps)",
]
filterwarnings = [
    "ignore:Module pydantic_core.*was imported after initial workflow load:UserWarning",
    "ignore:.*is marked with '@pytest.mark.asyncio' but it is not an async function:pytest.PytestWarning",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "app.models.contracts"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.workflows.design_project"
# Temporal SDK false positives: execute_activity overloads don't resolve
# heterogeneous activity types (arg-type), result types miss subclass
# attributes (attr-defined), workflow return type (func-returns-value)
disable_error_code = ["arg-type", "attr-defined", "func-returns-value"]

[[tool.mypy.overrides]]
module = "app.activities.validation"
# Pillow stubs miss Image.LANCZOS (attr-defined), Anthropic SDK message
# content type union too strict (list-item)
disable_error_code = ["attr-defined", "list-item"]

